--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <title>Feedback Dashboard</title>
     <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
+    <script src="liquidFillGauge.js" language="JavaScript"></script>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -66,6 +67,20 @@
                 <div class="col-lg-12">
                     <h1>Feedback API Dashboard</h1>
                     <a class="btn btn-lg btn-danger page-scroll" href="#daily">Explore More!</a>
+                    <h3>How many happy users have you had today?!</h3>
+                    <svg id="fillgauge1" width="100%" height="200" onclick="gauge1.update(NewValue());"></svg>
+                    <script language="JavaScript">
+                        var gauge1 = loadLiquidFillGauge("fillgauge1", 100);
+
+                        function NewValue(){
+                            if(Math.random() > .5){
+                                return Math.round(Math.random()*100);
+                            } else {
+                                return (Math.random()*100).toFixed(1);
+                            }
+                        }
+                    </script>
+                    <h3>Click me to find out!</h3>
 
                 </div>
             </div>
@@ -128,6 +143,8 @@
             </div>
         </div>
     </section>
+
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
