--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- My CSS -->   
     <link href="css/my.css" rel="stylesheet">
-
+    <link href="css/base.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
 </head>
@@ -99,6 +99,9 @@
                     </ul>
                     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
                             Daily Happy users and Sad users.
+                    </button>
+                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal2">
+                            Stacked Bar Graph from Input Data.
                     </button>
                 </div>
             </div>
@@ -364,6 +367,35 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Fun Bar Graph!</h4>
+                </div>
+
+                <div class="modal-body">
+                    <div id="chart"></div>
+                    <script src="stackedbar.js"></script>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
 
 
     <!-- jQuery -->
